Add AlertsService getPersonInfo unit tests